Update Bengali and French translations to match English content
- Updated what_i_do_text in bn.yml and fr.yml to match English version
- Changed blog titles to 'Sharbat's Blog' in all languages
- Updated blog subtitles to reflect broader range of topics
- Regenerated static site with updated translations

--- a/locales/bn.yml
+++ b/locales/bn.yml
@@ -1,8 +1,8 @@
 # Bengali translations
 bn:
   # Site info
-  site_title: "শর্বতনু চ্যাটার্জী - স্নায়ুবিজ্ঞানী ও গবেষক"
-  site_description: "স্নায়ুবিজ্ঞানে পোস্টডক্টরাল গবেষক, জেব্রাফিশ মডেলের মাধ্যমে মস্তিষ্ক-আচরণের সম্পর্ক অধ্যয়ন করছেন"
+  site_title: "শর্বতনু চ্যাটার্জী - গবেষক"
+  site_description: "স্নায়ুবিজ্ঞানে পোস্টডক্টরাল গবেষক"
   name: "শর্বতনু চ্যাটার্জী"
   
   # Navigation
@@ -16,17 +16,17 @@ bn:
   
   # Home page
   welcome_title: "আমার হোমপেজে স্বাগতম!"
-  intro_text: "আমি প্যারিসে একজন পোস্টডক্টরাল গবেষক, ড. তিহানা জোভানিকের দলে ইনস্টিটিউট দে নিউরোসায়েন্সেস প্যারিস-স্যাক্লেতে কাজ করছি।"
+  intro_text: "আমি প্যারিসে একজন পোস্টডক্টরাল গবেষক, ড. তিহানা ইয়োভানিচের দলে ইনস্টিটিউট দে নিউরোসায়েন্সেস প্যারিস-স্যাক্লেতে কাজ করছি।"
   what_i_do_title: "আমি কী করি?"
-  what_i_do_text: "আমি মূলত স্নায়ুবিজ্ঞানের ক্ষেত্রে কাজ করি - মস্তিষ্ক কীভাবে আচরণের দিকে নিয়ে যায় তা বোঝার চেষ্টা করি। আমার পিএইচডির জন্য, আমি ভঙ্গি বা ভারসাম্য নিয়ন্ত্রণ অধ্যয়ন করেছি, মডেল প্রাণী - জেব্রাফিশের সাহায্যে।"
+  what_i_do_text: "আমি মূলত স্নায়ুবিজ্ঞানে কাজ করি - মস্তিষ্ক কীভাবে ব্যাবহারের সৃষ্টি করে, তা বোঝার চেষ্টা করি। আরও জানতে আমার প্রকাশনা এবং (একাডেমিক) ব্লগ নিবন্ধগুলি দেখুন।"
   what_else_title: "আর কী করি?"
   what_else_text: "আমি ভাষা, ভ্রমণ, ইতিহাস, রাজনৈতিক তত্ত্ব, বিজ্ঞান যোগাযোগ এবং অভিবাসনে আগ্রহী। আমি ভাষা ও ভাষাবিজ্ঞান, ভ্রমণ এবং ইতিহাস নিয়ে ব্লগ লিখি।"
   where_from_title: "আমি কোথা থেকে এসেছি?"
-  where_from_text: "আমি কলকাতা শহরের উপকণ্ঠে (পশ্চিমবঙ্গ, ভারত) জন্মগ্রহণ করেছি। আমি সেখানে আমার প্রথম ১৮ বছর কাটিয়েছি, এবং পরবর্তীতে কানপুর, লোজান, লন্ডনে গিয়েছি, প্যারিসে আসার আগে যেখানে আমি বর্তমানে বাস করি।"
+  where_from_text: "আমি কলকাতা শহরের (পশ্চিমবঙ্গ, ভারত) শহরতলিতে জন্মগ্রহণ করি। সেখানে বাল্যকাল কাটিয়ে পরবর্তীকালে কানপুর, লস্যান, লন্ডনের পথে হঠাৎ প্যারিসে আসি, আপাতত আমি সেখানেই।"
   
   # Blog
-  blog_title: "একাডেমিক ব্লগ"
-  blog_subtitle: "স্নায়ুবিজ্ঞান, গবেষণা এবং একাডেমিয়া নিয়ে চিন্তাভাবনা"
+  blog_title: "শর্বতের ব্লগ"
+  blog_subtitle: "(নিউরো)বিজ্ঞান, গবেষণা, একাডেমিয়া, ভাষা, আমলাতন্ত্র, অভিবাসন ইত্যাদি নিয়ে চিন্তাভাবনা।"
   read_more: "আরও পড়ুন"
   published_on: "প্রকাশিত"
   
