--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,8 +1,8 @@
 # English translations
 en:
   # Site info
-  site_title: "Sharbatanu Chatterjee - Neuroscientist & Researcher"
-  site_description: "Postdoctoral researcher in neuroscience, studying brain-behavior relationships through zebrafish models"
+  site_title: "Sharbatanu Chatterjee - Researcher"
+  site_description: "Postdoctoral researcher in neuroscience"
   name: "Sharbatanu Chatterjee"
   
   # Navigation
@@ -15,14 +15,14 @@ en:
   nav_teaching: "Teaching"
   
   # Home page
-  welcome_title: "Welcome to my homepage!"
-  intro_text: "I am a postdoctoral researcher in Paris, working in the team of Dr. Tihana Jovanic at the Institut de Neurosciences Paris-Saclay."
+  welcome_title: "Sharbat's homepage!"
+  intro_text: "I am Sharbatanu Chatterjee, and I go by the name Sharbat. I am a postdoctoral researcher in Paris, working in the team of Dr. Tihana Jovanic at the Institut des Neurosciences Paris-Saclay."
   what_i_do_title: "What do I do?"
   what_i_do_text: "I broadly work in the field of neuroscience - to try and figure out how brains lead to behaviour. Please check out my publications and (academic) blog articles to know more."
   what_else_title: "What else do I do?"
   what_else_text: "I am interested in languages, travel, history, political theory, science communication, & immigration. I blog on languages & linguistics, travel, & history."
   where_from_title: "Where do I come from?"
-  where_from_text: "I was born in the banlieues (suburban areas) of the city of Calcutta (West Bengal, India). I spent my first 18 years there, and subsequently moved to Kanpur, Lausanne, London, before moving to Paris where I currently live."
+  where_from_text: "I was born in the banlieues (suburban areas) of the city of Calcutta (West Bengal, India). I spent my childhood there, and subsequently moved to Kanpur, Lausanne, London, before moving to Paris where I currently live."
   
   # Blog
   blog_title: "Sharbat's Blog"
@@ -45,7 +45,7 @@ en:
   
   # Publications
   publications_title: "Publications"
-  publications_subtitle: "Peer-reviewed articles and conference proceedings"
+  publications_subtitle: "Peer-reviewed (and not) articles and posters"
   
   # Talks
   talks_title: "Talks & Presentations"
