--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -1,8 +1,8 @@
 # French translations
 fr:
   # Site info
-  site_title: "Sharbatanu Chatterjee - Neuroscientifique & Chercheur"
-  site_description: "Chercheur postdoctoral en neurosciences, étudiant les relations cerveau-comportement via des modèles de poisson-zèbre"
+  site_title: "Sharbatanu Chatterjee - Chercheur"
+  site_description: "Chercheur postdoctoral en neurosciences"
   name: "Sharbatanu Chatterjee"
   
   # Navigation
@@ -16,17 +16,17 @@ fr:
   
   # Home page
   welcome_title: "Bienvenue sur ma page d'accueil !"
-  intro_text: "Je suis chercheur postdoctoral à Paris, travaillant dans l'équipe du Dr. Tihana Jovanic à l'Institut de Neurosciences Paris-Saclay."
+  intro_text: "Je suis Sharbatanu CHATTERJEE - Sharbat - chercheur postdoctoral à Paris, travaillant dans l'équipe du Dr. Tihana Jovanic à l'Institut des Neurosciences Paris-Saclay."
   what_i_do_title: "Que fais-je ?"
-  what_i_do_text: "Je travaille généralement dans le domaine des neurosciences - pour essayer de comprendre comment le cerveau mène au comportement. Pour mon doctorat, j'ai étudié le contrôle de la posture ou de l'équilibre, avec l'aide de l'animal modèle - le poisson-zèbre."
+  what_i_do_text: "Je travaille généralement dans le domaine des neurosciences - pour essayer de comprendre comment le cerveau mène au comportement. Veuillez consulter mes publications et articles de blog (académiques) pour en savoir plus."
   what_else_title: "Que fais-je d'autre ?"
   what_else_text: "Je m'intéresse aux langues, aux voyages, à l'histoire, à la théorie politique, à la communication scientifique et à l'immigration. Je blogue sur les langues et la linguistique, les voyages et l'histoire."
   where_from_title: "D'où viens-je ?"
   where_from_text: "Je suis né dans les banlieues de la ville de Calcutta (Bengale occidental, Inde). J'ai passé mes 18 premières années là-bas, puis j'ai déménagé à Kanpur, Lausanne, Londres, avant de m'installer à Paris où je vis actuellement."
   
   # Blog
-  blog_title: "Blog Académique"
-  blog_subtitle: "Réflexions sur les neurosciences, la recherche et le monde académique"
+  blog_title: "Blog de Sharbat"
+  blog_subtitle: "Réflexions sur les (neuro)sciences, la recherche, le monde académique, les langues, la bureaucratie, l'immigration, et al."
   read_more: "Lire la suite"
   published_on: "Publié le"
   
