--- a/locales/bn.yml
+++ b/locales/bn.yml
@@ -13,6 +13,8 @@ bn:
   nav_publications: "প্রকাশনা"
   nav_talks: "বক্তৃতা"
   nav_teaching: "শিক্ষাদান"
+  nav_cv: "সিভি"
+  nav_contact: "যোগাযোগ"
   
   # Home page
   welcome_title: "আমার হোমপেজে স্বাগতম!"
