--- a/locales/en.yml
+++ b/locales/en.yml
@@ -13,6 +13,8 @@ en:
   nav_publications: "Publications"
   nav_talks: "Talks"
   nav_teaching: "Teaching"
+  nav_cv: "CV"
+  nav_contact: "Contact Me"
   
   # Home page
   welcome_title: "Sharbat's homepage!"
