Simplify all page layouts to match CV design
✨ Design Consistency:
- Remove colorful hero sections from all pages
- Adopt clean, minimal CV-style headers throughout
- Use consistent typography and spacing

🎯 Pages Updated:
- Blog: Simplified layout with clean post listing
- Publications: Timeline-style with dynamic content loading
- Talks: Clean presentation list
- Teaching: Minimalist course information
- News: Simple article format
- Notebooks: Clean notebook gallery

🔧 Technical Improvements:
- Remove complex sidebars and filters
- Focus on content readability
- Consistent page structure across all sections
- Responsive design maintained
- Revert font sizes to optimal proportions

📱 User Experience:
- Faster loading with simplified layouts
- Better mobile responsiveness
- Cleaner navigation and content discovery
- Professional academic appearance

--- a/locales/bn.yml
+++ b/locales/bn.yml
@@ -15,6 +15,8 @@ bn:
   nav_teaching: "শিক্ষাদান"
   nav_cv: "সিভি"
   nav_contact: "যোগাযোগ"
+  nav_cv: "সিভি"
+  nav_contact: "যোগাযোগ"
   
   # Home page
   welcome_title: "আমার হোমপেজে স্বাগতম!"
