Generate static site and update content

--- a/locales/bn.yml
+++ b/locales/bn.yml
@@ -15,8 +15,8 @@ bn:
   nav_contact: "যোগাযোগ"
   
   # Home page
-  welcome_title: "আমার হোমপেজে স্বাগতম!"
-  intro_text: "আমি প্যারিসে একজন পোস্টডক্টরাল গবেষক, ড. তিহানা ইয়োভানিচের দলে ইনস্টিটিউট দে নিউরোসায়েন্সেস প্যারিস-স্যাক্লেতে কাজ করছি।"
+  welcome_title: "আমার হোমপেজে সুস্বাগতম্‌!"
+  intro_text: "আমার নাম শর্বতনু চ্যাটার্জী, আমি শর্বত নামে পরিচিত। আমি প্যারিসে একজন পোস্টডক্টরাল গবেষক, ড. তিহানা ইয়োভানিচের দলে ইনস্টিটিউট দে নিউরোসায়েন্সেস প্যারিস-স্যাক্লেতে কাজ করছি।"
   what_i_do_title: "আমি কী করি?"
   what_i_do_text: "আমি মূলত স্নায়ুবিজ্ঞানে কাজ করি - মস্তিষ্ক কীভাবে ব্যাবহারের সৃষ্টি করে, তা বোঝার চেষ্টা করি। আরও জানতে আমার প্রকাশনা এবং (একাডেমিক) ব্লগ নিবন্ধগুলি দেখুন।"
   what_else_title: "আর কী করি?"
@@ -25,8 +25,8 @@ bn:
   where_from_text: "আমি কলকাতা শহরের (পশ্চিমবঙ্গ, ভারত) শহরতলিতে জন্মগ্রহণ করি। সেখানে বাল্যকাল কাটিয়ে পরবর্তীকালে কানপুর, লস্যান, লন্ডনের পথে হঠাৎ প্যারিসে আসি, আপাতত আমি সেখানেই।"
   
   # Blog
-  blog_title: "শর্বতের ব্লগ"
-  blog_subtitle: "(নিউরো)বিজ্ঞান, গবেষণা, একাডেমিয়া, ভাষা, আমলাতন্ত্র, অভিবাসন ইত্যাদি নিয়ে চিন্তাভাবনা।"
+  blog_title: "দ্য শর্বত ব্লগ"
+  blog_subtitle: "(স্নায়ু)বিজ্ঞান, গবেষণা, একাডেমিয়া, ভাষা, আমলাতন্ত্র, অভিবাসন ইত্যাদি নিয়ে চিন্তাভাবনা।"
   read_more: "আরও পড়ুন"
   published_on: "প্রকাশিত"
   
@@ -54,6 +54,62 @@ bn:
   # Teaching
   teaching_title: "শিক্ষাদান"
   teaching_subtitle: "কোর্স এবং শিক্ষামূলক কার্যক্রম"
+  
+  # CV Page
+  cv_title: "জীবনবৃত্তান্ত"
+  cv_subtitle: "একাডেমিক এবং পেশাগত অভিজ্ঞতা"
+  cv_download: "পিডিএফ ডাউনলোড"
+  cv_education: "শিক্ষা"
+  cv_experience: "কর্ম অভিজ্ঞতা"
+  cv_skills: "প্রযুক্তিগত দক্ষতা"
+  cv_languages: "ভাষা"
+  cv_phd_title: "পদার্থবিজ্ঞানে পিএইচডি (নিউরোসায়েন্স)"
+  cv_phd_university: "সরবন বিশ্ববিদ্যালয়, প্যারিস, ফ্রান্স"
+  cv_phd_thesis: "থিসিস: \"পোস্টুরাল নিয়ন্ত্রণের জন্য আচরণগত কৌশল এবং নিউরাল সার্কিট\""
+  cv_ms_title: "জীববিজ্ঞান ও প্রযুক্তিতে এমএস"
+  cv_ms_university: "ইকোল পলিটেকনিক ফেডেরাল দে লোজান (EPFL), সুইজারল্যান্ড"
+  cv_ms_spec: "বিশেষীকরণ: নিউরোসায়েন্স"
+  cv_btech_title: "কম্পিউটার সায়েন্স ও ইঞ্জিনিয়ারিংয়ে বি.টেক"
+  cv_btech_university: "ভারতীয় প্রযুক্তি ইনস্টিটিউট (IIT) কানপুর, ভারত"
+  cv_btech_minor: "ভাষাতত্ত্ব এবং ইংরেজি সাহিত্যে মাইনর"
+  cv_ra_title: "গবেষণা সহায়ক"
+  cv_ra_university: "সেইনসবারি ওয়েলকাম সেন্টার, UCL, লন্ডন, যুক্তরাজ্য"
+  cv_ra_supervisor: "সুপারভাইজার:"
+  cv_ra_focus: "গবেষণার ফোকাস: ইঁদুরের কার্যকরী স্মৃতি এবং আচরণের জন্য পদ্ধতি উন্নয়ন"
+  cv_postdoc_title: "পোস্টডক্টরাল গবেষক"
+  cv_postdoc_university: "ইনস্টিটিউট দে নিউরোসায়েন্সেস প্যারিস-স্যাক্লে, CNRS, ফ্রান্স"
+  cv_postdoc_focus: "গবেষণার ফোকাস: প্রেরণা এবং নেভিগেশনের আচরণ ও নিউরাল সার্কিট"
+  cv_programming: "প্রোগ্রামিং ভাষা"
+  cv_research_tools: "গবেষণা সরঞ্জাম"
+  cv_lang_bengali: "বাংলা:"
+  cv_lang_english: "ইংরেজি:"
+  cv_lang_french: "ফরাসি:"
+  cv_lang_hindi: "হিন্দি:"
+  cv_lang_german: "জার্মান:"
+  cv_lang_native: "মাতৃভাষা"
+  cv_lang_fluent: "সাবলীল"
+  cv_lang_intermediate: "মধ্যম"
+  cv_lang_basic: "প্রাথমিক"
+  
+  # Contact Page
+  contact_title: "যোগাযোগ করুন"
+  contact_subtitle: "যোগাযোগ করুন - আপনার কাছ থেকে শুনতে চাই!"
+  contact_professional: "পেশাগত ইমেইল"
+  contact_personal: "ব্যক্তিগত ইমেইল"
+  contact_academic: "একাডেমিক অনুসন্ধান এবং সহযোগিতার জন্য"
+  contact_general: "সাধারণ অনুসন্ধান এবং নেটওয়ার্কিংয়ের জন্য"
+  contact_social: "সোশ্যাল মিডিয়ায় সংযুক্ত হন"
+  contact_research: "গবেষণা সহযোগিতা"
+  contact_research_interested: "আমি সর্বদা আলোচনায় আগ্রহী:"
+  contact_collab_neuro: "নিউরোসায়েন্স গবেষণা সহযোগিতা"
+  contact_collab_postural: "পোস্টুরাল নিয়ন্ত্রণ এবং গতিপ্রবাহ অধ্যয়ন"
+  contact_collab_comp: "কম্পিউটেশনাল নিউরোসায়েন্স প্রকল্প"
+  contact_collab_zebrafish: "জেব্রাফিশ আচরণগত বিশ্লেষণ"
+  contact_collab_mentoring: "একাডেমিক পরামর্শ এবং ক্যারিয়ার উপদেশ"
+  contact_reach_out: "সম্ভাব্য সহযোগিতা নিয়ে আলোচনা করতে বা আমার গবেষণা সম্পর্কে প্রশ্ন থাকলে ইমেইলের মাধ্যমে যোগাযোগ করুন!"
+  contact_location: "বর্তমান অবস্থান"
+  contact_institute: "ইনস্টিটিউট দে নিউরোসায়েন্সেস প্যারিস-স্যাক্লে"
+  contact_affiliation: "CNRS - ইউনিভার্সিটি প্যারিস-স্যাক্লে"
   
   # Footer
   footer_rights: "সর্বস্বত্ব সংরক্ষিত।"
