--- a/locales/en.yml
+++ b/locales/en.yml
@@ -15,7 +15,7 @@ en:
   nav_contact: "Contact Me"
   
   # Home page
-  welcome_title: "Sharbat's homepage!"
+  welcome_title: "Welcome to my Homepage!"
   intro_text: "I am Sharbatanu Chatterjee, and I go by the name Sharbat. I am a postdoctoral researcher in Paris, working in the team of Dr. Tihana Jovanic at the Institut des Neurosciences Paris-Saclay."
   what_i_do_title: "What do I do?"
   what_i_do_text: "I broadly work in the field of neuroscience - to try and figure out how brains lead to behaviour. Please check out my publications and (academic) blog articles to know more."
@@ -25,7 +25,7 @@ en:
   where_from_text: "I was born in the banlieues (suburban areas) of the city of Calcutta (West Bengal, India). I spent my childhood there, and subsequently moved to Kanpur, Lausanne, London, before moving to Paris where I currently live."
   
   # Blog
-  blog_title: "Sharbat's Blog"
+  blog_title: "The Sharbat Blog"
   blog_subtitle: "Thoughts on (neuro)science, research, academia, language, bureaucracy, immigration, et al."
   read_more: "Read more"
   published_on: "Published on"
@@ -54,6 +54,62 @@ en:
   # Teaching
   teaching_title: "Teaching"
   teaching_subtitle: "Courses and educational activities"
+  
+  # CV Page
+  cv_title: "Curriculum Vitae"
+  cv_subtitle: "Academic and Professional Experience"
+  cv_download: "Download PDF"
+  cv_education: "Education"
+  cv_experience: "Work Experience"
+  cv_skills: "Technical Skills"
+  cv_languages: "Languages"
+  cv_phd_title: "Ph.D. in Physics (Neuroscience)"
+  cv_phd_university: "Sorbonne Université, Paris, France"
+  cv_phd_thesis: "Thesis: \"Behavioural strategies and neural circuits for postural control\""
+  cv_ms_title: "M.S. in Life Sciences & Technology"
+  cv_ms_university: "École Polytechnique Fédérale de Lausanne (EPFL), Switzerland"
+  cv_ms_spec: "Specialization: Neuroscience"
+  cv_btech_title: "B.Tech. in Computer Science & Engineering"
+  cv_btech_university: "Indian Institute of Technology (IIT) Kanpur, India"
+  cv_btech_minor: "Minor in Linguistic Theory and English Literature"
+  cv_ra_title: "Research Assistant"
+  cv_ra_university: "Sainsbury Wellcome Center, UCL, London, UK"
+  cv_ra_supervisor: "Supervisor:"
+  cv_ra_focus: "Research focus: Developing methods for working memory and behavior in rodents"
+  cv_postdoc_title: "Postdoctoral Researcher"
+  cv_postdoc_university: "Institut des Neurosciences Paris-Saclay, CNRS, France"
+  cv_postdoc_focus: "Research focus: Behavior and neural circuits of motivation and navigation"
+  cv_programming: "Programming Languages"
+  cv_research_tools: "Research Tools"
+  cv_lang_bengali: "Bengali:"
+  cv_lang_english: "English:"
+  cv_lang_french: "French:"
+  cv_lang_hindi: "Hindi:"
+  cv_lang_german: "German:"
+  cv_lang_native: "Native"
+  cv_lang_fluent: "Fluent"
+  cv_lang_intermediate: "Intermediate"
+  cv_lang_basic: "Basic"
+  
+  # Contact Page
+  contact_title: "Contact Me"
+  contact_subtitle: "Get in touch - I'd love to hear from you!"
+  contact_professional: "Professional Email"
+  contact_personal: "Personal Email"
+  contact_academic: "For academic inquiries and collaboration"
+  contact_general: "For general inquiries and networking"
+  contact_social: "Connect on Social Media"
+  contact_research: "Research Collaboration"
+  contact_research_interested: "I'm always interested in discussing:"
+  contact_collab_neuro: "Neuroscience research collaborations"
+  contact_collab_postural: "Postural control and locomotion studies"
+  contact_collab_comp: "Computational neuroscience projects"
+  contact_collab_zebrafish: "Zebrafish behavioral analysis"
+  contact_collab_mentoring: "Academic mentoring and career advice"
+  contact_reach_out: "Feel free to reach out via email to discuss potential collaborations or if you have questions about my research!"
+  contact_location: "Current Location"
+  contact_institute: "Institut des Neurosciences Paris-Saclay"
+  contact_affiliation: "CNRS - Université Paris-Saclay"
   
   # Footer
   footer_rights: "All rights reserved."
