--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -25,7 +25,7 @@ fr:
   where_from_text: "Je suis né dans les banlieues de la ville de Calcutta (Bengale occidental, Inde). J'ai passé mes 18 premières années là-bas, puis j'ai déménagé à Kanpur, Lausanne, Londres, avant de m'installer à Paris où je vis actuellement."
   
   # Blog
-  blog_title: "Blog de Sharbat"
+  blog_title: "Le Sharbat Blog"
   blog_subtitle: "Réflexions sur les (neuro)sciences, la recherche, le monde académique, les langues, la bureaucratie, l'immigration, et al."
   read_more: "Lire la suite"
   published_on: "Publié le"
@@ -54,6 +54,62 @@ fr:
   # Teaching
   teaching_title: "Enseignement"
   teaching_subtitle: "Cours et activités éducatives"
+  
+  # CV Page
+  cv_title: "Curriculum Vitae"
+  cv_subtitle: "Expérience Académique et Professionnelle"
+  cv_download: "Télécharger PDF"
+  cv_education: "Formation"
+  cv_experience: "Expérience Professionnelle"
+  cv_skills: "Compétences Techniques"
+  cv_languages: "Langues"
+  cv_phd_title: "Doctorat en Physique (Neurosciences)"
+  cv_phd_university: "Sorbonne Université, Paris, France"
+  cv_phd_thesis: "Thèse : \"Stratégies comportementales et circuits neuronaux pour le contrôle postural\""
+  cv_ms_title: "Master en Sciences et Technologies du Vivant"
+  cv_ms_university: "École Polytechnique Fédérale de Lausanne (EPFL), Suisse"
+  cv_ms_spec: "Spécialisation : Neurosciences"
+  cv_btech_title: "B.Tech. en Informatique et Ingénierie"
+  cv_btech_university: "Institut Indien de Technologie (IIT) Kanpur, Inde"
+  cv_btech_minor: "Mineure en Théorie Linguistique et Littérature Anglaise"
+  cv_ra_title: "Assistant de Recherche"
+  cv_ra_university: "Sainsbury Wellcome Center, UCL, Londres, Royaume-Uni"
+  cv_ra_supervisor: "Superviseur :"
+  cv_ra_focus: "Focus de recherche : Développement de méthodes pour la mémoire de travail et le comportement chez les rongeurs"
+  cv_postdoc_title: "Chercheur Postdoctoral"
+  cv_postdoc_university: "Institut des Neurosciences Paris-Saclay, CNRS, France"
+  cv_postdoc_focus: "Focus de recherche : Comportement et circuits neuronaux de la motivation et de la navigation"
+  cv_programming: "Langages de Programmation"
+  cv_research_tools: "Outils de Recherche"
+  cv_lang_bengali: "Bengali :"
+  cv_lang_english: "Anglais :"
+  cv_lang_french: "Français :"
+  cv_lang_hindi: "Hindi :"
+  cv_lang_german: "Allemand :"
+  cv_lang_native: "Natif"
+  cv_lang_fluent: "Courant"
+  cv_lang_intermediate: "Intermédiaire"
+  cv_lang_basic: "Basique"
+  
+  # Contact Page
+  contact_title: "Contactez-moi"
+  contact_subtitle: "Prenez contact - j'aimerais avoir de vos nouvelles !"
+  contact_professional: "Email Professionnel"
+  contact_personal: "Email Personnel"
+  contact_academic: "Pour les demandes académiques et collaborations"
+  contact_general: "Pour les demandes générales et réseautage"
+  contact_social: "Connectez-vous sur les Réseaux Sociaux"
+  contact_research: "Collaboration de Recherche"
+  contact_research_interested: "Je suis toujours intéressé à discuter de :"
+  contact_collab_neuro: "Collaborations de recherche en neurosciences"
+  contact_collab_postural: "Études du contrôle postural et de la locomotion"
+  contact_collab_comp: "Projets de neurosciences computationnelles"
+  contact_collab_zebrafish: "Analyse comportementale du poisson-zèbre"
+  contact_collab_mentoring: "Mentorat académique et conseils de carrière"
+  contact_reach_out: "N'hésitez pas à me contacter par email pour discuter de collaborations potentielles ou si vous avez des questions sur ma recherche !"
+  contact_location: "Localisation Actuelle"
+  contact_institute: "Institut des Neurosciences Paris-Saclay"
+  contact_affiliation: "CNRS - Université Paris-Saclay"
   
   # Footer
   footer_rights: "Tous droits réservés."
