--- a/content/publications/2024-03-27-rolltilt.md
+++ b/content/publications/2024-03-27-rolltilt.md
@@ -2,7 +2,7 @@
 title: "Rolling and tilting: the role of the vestibular system in zebrafish locomotion"
 authors: ["Sharbatanu Chatterjee", "Other Author"]
 date: "2024"
-journal: "Journal of Experimental Biology"
+journal: "bioRxiv"
 type: "journal"
 lang: "en"
 tags: ["zebrafish", "vestibular system", "locomotion", "biomechanics"]
@@ -10,43 +10,7 @@ doi: "10.1242/jeb.246785"
 url: "https://doi.org/10.1242/jeb.246785"
 pdf: "/files/bhattacharjee2024_jeb.pdf"
 abstract: |
-  The vestibular system plays a crucial role in maintaining balance and spatial orientation across vertebrates. Using high-speed video analysis and computational modeling, we investigate how the vestibular system contributes to rolling and tilting behaviors during zebrafish locomotion, revealing fundamental principles of balance control in aquatic environments.
+  The vestibular system plays a crucial role in maintaining balance and spatial orientation across vertebrates. Using rotating light-sheet microscopy, we see how .
 ---
 
-# Rolling and tilting: the role of the vestibular system in zebrafish locomotion
-
-This study examines the critical role of the vestibular system in coordinating complex locomotor behaviors in zebrafish, focusing on rolling and tilting movements that are essential for navigation in three-dimensional aquatic environments.
-
-## Key Findings
-
-### Vestibular-Motor Integration
-We demonstrate that the zebrafish vestibular system:
-- Provides continuous feedback for roll and tilt corrections during swimming
-- Integrates sensory information from otoliths and semicircular canals
-- Coordinates with visual and lateral line systems for comprehensive spatial awareness
-- Enables rapid postural adjustments during escape responses
-
-### Biomechanical Analysis
-High-speed videography revealed:
-- Precise temporal coordination between vestibular input and motor output
-- Distinct neural pathways for roll vs. tilt control mechanisms
-- Adaptive responses to different swimming speeds and environmental conditions
-- Conservation of vestibular-motor patterns across developmental stages
-
-### Computational Modeling
-Our mathematical models successfully predict:
-- Vestibular organ activation patterns during different maneuvers
-- Motor neuron recruitment sequences for roll and tilt behaviors
-- Sensory-motor delays and their compensation mechanisms
-- Optimal control strategies for maintaining equilibrium
-
-## Implications
-
-### Evolutionary Perspective
-This work provides insights into the evolution of vestibular function across vertebrates, suggesting that fundamental balance control mechanisms are highly conserved from fish to mammals.
-
-### Biomedical Applications
-The findings have implications for understanding human vestibular disorders and developing biomimetic systems for underwater robotics.
-
-### Technical Innovation
-The integration of high-speed imaging with computational modeling establishes new methodological standards for studying sensorimotor integration in small aquatic organisms.
+# Rolling
