--- a/locales/bn.yml
+++ b/locales/bn.yml
@@ -16,7 +16,7 @@ bn:
   
   # Home page
   welcome_title: "আমার হোমপেজে সুস্বাগতম্‌!"
-  intro_text: "আমার নাম শর্বতনু চ্যাটার্জী, আমি শর্বত নামে পরিচিত। আমি প্যারিসে একজন পোস্টডক্টরাল গবেষক, ড. তিহানা ইয়োভানিচের দলে ইনস্টিটিউট দে নিউরোসায়েন্সেস প্যারিস-স্যাক্লেতে কাজ করছি।"
+  intro_text: "আমার নাম শর্বতনু চ্যাটার্জী, আমি শর্বত নামে পরিচিত। আমি প্যারিসে নিউরোসায়েন্সে পোস্টডক্টরাল গবেষক, <a href=\"https://www.cnrs.fr/\" target=\"_blank\">CNRS</a>-এ কর্মরত, এবং ড. টিহানা জোভানিচের দলে <a href=\"https://www.neuropsi.cnrs.fr/\" target=\"_blank\">Institut des Neurosciences Paris-Saclay</a>-এ কাজ করছি।"
   what_i_do_title: "আমি কী করি?"
   what_i_do_text: "আমি মূলত স্নায়ুবিজ্ঞানে কাজ করি - মস্তিষ্ক কীভাবে ব্যাবহারের সৃষ্টি করে, তা বোঝার চেষ্টা করি। আরও জানতে আমার প্রকাশনা এবং (একাডেমিক) ব্লগ নিবন্ধগুলি দেখুন।"
   what_else_title: "আর কী করি?"
