--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -16,7 +16,7 @@ fr:
   
   # Home page
   welcome_title: "Bienvenue sur ma page d'accueil !"
-  intro_text: "Je suis Sharbatanu CHATTERJEE - Sharbat - chercheur postdoctoral à Paris, travaillant dans l'équipe du Dr. Tihana Jovanic à l'Institut des Neurosciences Paris-Saclay."
+  intro_text: "Je suis Sharbatanu Chatterjee, et je me fais appeler Sharbat. Je suis chercheur postdoctoral en neurosciences à Paris, employé par le <a href=\"https://www.cnrs.fr/\" target=\"_blank\">CNRS</a>, et je travaille dans l'équipe du Dr. Tihana Jovanic à l'<a href=\"https://www.neuropsi.cnrs.fr/\" target=\"_blank\">Institut des Neurosciences Paris-Saclay</a>."
   what_i_do_title: "Que fais-je ?"
   what_i_do_text: "Je travaille généralement dans le domaine des neurosciences - pour essayer de comprendre comment le cerveau mène au comportement. Veuillez consulter mes publications et articles de blog (académiques) pour en savoir plus."
   what_else_title: "Que fais-je d'autre ?"
